[gd_scene load_steps=21 format=3 uid="uid://ckmh6gnitv64p"]

[ext_resource type="PackedScene" uid="uid://bpg2lcg0737in" path="res://structure_handler.tscn" id="1_7h3wo"]
[ext_resource type="Script" path="res://level.gd" id="1_fnxtp"]
[ext_resource type="Texture2D" uid="uid://bia0rvlplkgl3" path="res://Background.png" id="2_36gqh"]
[ext_resource type="Texture2D" uid="uid://cqq6525or2suw" path="res://FLOOR1.png" id="3_c7bgw"]
[ext_resource type="PackedScene" uid="uid://xn4epdl40krm" path="res://void.tscn" id="3_gfdxi"]
[ext_resource type="PackedScene" uid="uid://bgj4vp25lv1gd" path="res://laser.tscn" id="4_t28y2"]
[ext_resource type="PackedScene" uid="uid://bkwa8366unv8y" path="res://player.tscn" id="5_w3uvl"]
[ext_resource type="Shader" path="res://laser.gdshader" id="7_fv8rl"]
[ext_resource type="AudioStream" uid="uid://7us4g0ytk3co" path="res://consume.wav" id="8_glsn0"]
[ext_resource type="PackedScene" uid="uid://i48t7rwoaplh" path="res://UI/pause_menu.tscn" id="8_pf3jv"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_j53cu"]
vertices = PackedVector2Array(150, 0, 0, 75, -150, 0, 0, -75)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, 75, -150, 0, 0, -75, 150, 0)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1fq3d"]
texture = ExtResource("3_c7bgw")
margins = Vector2i(0, 72)
texture_region_size = Vector2i(300, 212)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -29)
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_j53cu")

[sub_resource type="TileSet" id="TileSet_ajha4"]
tile_shape = 1
tile_size = Vector2i(300, 150)
navigation_layer_0/layers = 1
sources/2 = SubResource("TileSetAtlasSource_1fq3d")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bpbao"]
resource_local_to_scene = true
shader = ExtResource("7_fv8rl")
shader_parameter/resolution = Vector2(600, 400)
shader_parameter/line_primary_color = Color(0.08, 0.85, 0.4, 1)
shader_parameter/line_secondary_color = Color(0.85, 0.5, 0.25, 1)
shader_parameter/line_tertiary_color = Color(0.8, 0.1, 0.35, 1)
shader_parameter/color_gradient_pos = 0.5
shader_parameter/line_thickness = 0.1
shader_parameter/color_change_speed = 0.8
shader_parameter/color_change_amplitude = 0.69
shader_parameter/wave_speed = 1.5
shader_parameter/wave_amplitude = 0.2
shader_parameter/wave_frequency = 3.0
shader_parameter/wave_offset = 1.8
shader_parameter/iterations = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_puidh"]
resource_local_to_scene = true
shader = ExtResource("7_fv8rl")
shader_parameter/resolution = Vector2(600, 400)
shader_parameter/line_primary_color = Color(0.08, 0.85, 0.4, 1)
shader_parameter/line_secondary_color = Color(0.85, 0.5, 0.25, 1)
shader_parameter/line_tertiary_color = Color(0.8, 0.1, 0.35, 1)
shader_parameter/color_gradient_pos = 0.5
shader_parameter/line_thickness = 0.1
shader_parameter/color_change_speed = 0.8
shader_parameter/color_change_amplitude = 0.69
shader_parameter/wave_speed = 1.5
shader_parameter/wave_amplitude = 0.2
shader_parameter/wave_frequency = 3.0
shader_parameter/wave_offset = 1.8
shader_parameter/iterations = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cojwc"]
resource_local_to_scene = true
shader = ExtResource("7_fv8rl")
shader_parameter/resolution = Vector2(600, 400)
shader_parameter/line_primary_color = Color(0.08, 0.85, 0.4, 1)
shader_parameter/line_secondary_color = Color(0.85, 0.5, 0.25, 1)
shader_parameter/line_tertiary_color = Color(0.8, 0.1, 0.35, 1)
shader_parameter/color_gradient_pos = 0.5
shader_parameter/line_thickness = 0.1
shader_parameter/color_change_speed = 0.8
shader_parameter/color_change_amplitude = 0.69
shader_parameter/wave_speed = 1.5
shader_parameter/wave_amplitude = 0.2
shader_parameter/wave_frequency = 3.0
shader_parameter/wave_offset = 1.8
shader_parameter/iterations = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iu7sj"]
resource_local_to_scene = true
shader = ExtResource("7_fv8rl")
shader_parameter/resolution = Vector2(600, 400)
shader_parameter/line_primary_color = Color(0.08, 0.85, 0.4, 1)
shader_parameter/line_secondary_color = Color(0.85, 0.5, 0.25, 1)
shader_parameter/line_tertiary_color = Color(0.8, 0.1, 0.35, 1)
shader_parameter/color_gradient_pos = 0.5
shader_parameter/line_thickness = 0.1
shader_parameter/color_change_speed = 0.8
shader_parameter/color_change_amplitude = 0.69
shader_parameter/wave_speed = 1.5
shader_parameter/wave_amplitude = 0.2
shader_parameter/wave_frequency = 3.0
shader_parameter/wave_offset = 1.8
shader_parameter/iterations = 4

[sub_resource type="Animation" id="Animation_8efte"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TileMap/Void:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TileMap/Void/Centerblock/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TileMap/Void/ColorRect2:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TileMap/Void/ColorRect:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TileMap/Void/ColorRect2/AnimatedSprite2D2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.886275)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TileMap/Void/ColorRect/AnimatedSprite2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.886275)]
}

[sub_resource type="Animation" id="Animation_mkug8"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TileMap/Void:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6, 0.6), Vector2(10, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TileMap/Void/Centerblock/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TileMap/Void/ColorRect2:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TileMap/Void/ColorRect:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TileMap/Void/ColorRect2/AnimatedSprite2D2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TileMap/Void/ColorRect/AnimatedSprite2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xx6d3"]
_data = {
"RESET": SubResource("Animation_8efte"),
"die": SubResource("Animation_mkug8")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_fnxtp")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -6
scale = Vector2(0.915, 0.915)
texture = ExtResource("2_36gqh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="structure_handler" parent="CanvasLayer" instance=ExtResource("1_7h3wo")]
metadata/activeTilemap = NodePath("../../TileMap")
metadata/playerNode = NodePath("../../Player")

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("8_pf3jv")]
process_mode = 3
visible = false
z_index = 10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Player" parent="." groups=["Player"] instance=ExtResource("5_w3uvl")]
z_index = 1
position = Vector2(-415, 455)

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
y_sort_enabled = true
tile_set = SubResource("TileSet_ajha4")
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(-196610, 2, 0, -131075, 2, 0, -65539, 2, 0, 65533, 2, 0, 262141, 2, 0, 196605, 2, 0, 327677, 2, 0, 262140, 2, 0, 131068, 2, 0, -262146, 2, 0, -327681, 2, 0, -393216, 2, 0, -327680, 2, 0, -262143, 2, 0, -196607, 2, 0, -65535, 2, 0, 2, 2, 0, 65537, 2, 0, 131074, 2, 0, 196609, 2, 0, 262146, 2, 0, 327681, 2, 0, 393217, 2, 0, 327680, 2, 0, 393216, 2, 0, 458751, 2, 0, 393214, 2, 0, 327678, 2, 0, 393213, 2, 0, 327679, 2, 0, 393215, 2, 0, 262144, 2, 0, 262145, 2, 0, -262145, 2, 0, 131073, 2, 0, 196608, 2, 0, 262143, 2, 0, 262142, 2, 0, 196606, 2, 0, 131069, 2, 0, -3, 2, 0, -393217, 2, 0, -458753, 2, 0, -393218, 2, 0, -458754, 2, 0, -393219, 2, 0, -327683, 2, 0, -262148, 2, 0, -196612, 2, 0, -327682, 2, 0, -262147, 2, 0, -196611, 2, 0, -131076, 2, 0, -65540, 2, 0, -5, 2, 0, 65532, 2, 0, 131067, 2, 0, 196604, 2, 0, 262139, 2, 0, 327676, 2, 0, -4, 2, 0, 393212, 2, 0, 458748, 2, 0, 524284, 2, 0, 589821, 2, 0, 524285, 2, 0, 589822, 2, 0, 589823, 2, 0, 524287, 2, 0, 524288, 2, 0, 458752, 2, 0, 524286, 2, 0, 458750, 2, 0, 458749, 2, 0, 655359, 2, 0, 655358, 2, 0, 655357, 2, 0, 393211, 2, 0, 327675, 2, 0, 524289, 2, 0, 589825, 2, 0, 524290, 2, 0, 589826, 2, 0, 524291, 2, 0, 458754, 2, 0, 393219, 2, 0, 327682, 2, 0, 262147, 2, 0, 196610, 2, 0, 589824, 2, 0, 393218, 2, 0, 458753, 2, 0, 655360, 2, 0, 196611, 2, 0, 131075, 2, 0, 65538, 2, 0, -65534, 2, 0, -131070, 2, 0, -196606, 2, 0, -262141, 2, 0, -327678, 2, 0, -262142, 2, 0, 3, 2, 0, 65539, 2, 0, -393213, 2, 0, -458750, 2, 0, -393214, 2, 0, -458751, 2, 0, -458752, 2, 0, -524288, 2, 0, -524289, 2, 0, -524290, 2, 0, -589824, 2, 0, -589823, 2, 0, -589822, 2, 0, -524285, 2, 0, -393215, 2, 0, -524287, 2, 0, -327679, 2, 0, -524286, 2, 0, -327677, 2, 0, -196605, 2, 0, -131069, 2, 0, -65533, 2, 0, 327683, 2, 0, 458755, 2, 0, 589827, 2, 0, 655363, 2, 0, 720899, 2, 0, 786435, 2, 0, 131076, 2, 0, 4, 2, 0, -65532, 2, 0, -131068, 2, 0, -196604, 2, 0, -262140, 2, 0, -327676, 2, 0, -393212, 2, 0, -458748, 2, 0, -524284, 2, 0, 262148, 2, 0, 65540, 2, 0, -458749, 2, 0, -589821, 2, 0, 196612, 2, 0, 655361, 2, 0, 720896, 2, 0, 720895, 2, 0, 720894, 2, 0, 720893, 2, 0, 655356, 2, 0, 589820, 2, 0, 655355, 2, 0, 589819, 2, 0, 524282, 2, 0, 458747, 2, 0, 393210, 2, 0, 196603, 2, 0, 65531, 2, 0, -65541, 2, 0, -131077, 2, 0, -196613, 2, 0, -262149, 2, 0, -327684, 2, 0, -393221, 2, 0, -458756, 2, 0, -393220, 2, 0, 524283, 2, 0, 720892, 2, 0, 786429, 2, 0, -327685, 2, 0, -524292, 2, 0, -589828, 2, 0, -589827, 2, 0, -655363, 2, 0, -589826, 2, 0, -655362, 2, 0, -589825, 2, 0, -524291, 2, 0, -458755, 2, 0, -262150, 2, 0, -131078, 2, 0, -65542, 2, 0, -6, 2, 0, 65530, 2, 0, 131066, 2, 0, 262138, 2, 0, -458757, 2, 0, -196614, 2, 0, 196602, 2, 0, 327674, 2, 0, 393209, 2, 0, 458746, 2, 0, -524293, 2, 0, 786430, 2, 0, 786431, 2, 0, 720897, 2, 0, 655362, 2, 0, 720898, 2, 0, 655364, 2, 0, 524292, 2, 0, 524293, 2, 0, 458757, 2, 0, 327688, 7, 0, 393220, 2, 0, 327684, 2, 0, 262149, 2, 0, 327685, 2, 0, 393221, 2, 0, 458756, 2, 0, 589828, 2, 0, -655367, 2, 0, -589831, 2, 0, -524295, 2, 0, -458759, 2, 0, -393223, 2, 0, -327687, 2, 0, -262151, 2, 0, -196615, 2, 0, -131079, 2, 0, -65543, 2, 0, -7, 2, 0, 65529, 2, 0, 131065, 2, 0, 196601, 2, 0, 262137, 2, 0, 327673, 2, 0, 458745, 2, 0, 524281, 2, 0, 589817, 2, 0, 655353, 2, 0, 720889, 2, 0, 786425, 2, 0, 851961, 2, 0, -655366, 2, 0, -589830, 2, 0, -524294, 2, 0, -458758, 2, 0, -393222, 2, 0, -327686, 2, 0, 589818, 2, 0, 655354, 2, 0, 720890, 2, 0, 786426, 2, 0, 851962, 2, 0, -655365, 2, 0, -589829, 2, 0, 720891, 2, 0, 786427, 2, 0, 851963, 2, 0, -655364, 2, 0, 786428, 2, 0, 851964, 2, 0, 851965, 2, 0, 851966, 2, 0, -655361, 2, 0, 851967, 2, 0, -720896, 2, 0, -655360, 2, 0, 786432, 2, 0, -720895, 2, 0, -655359, 2, 0, 786433, 2, 0, -720894, 2, 0, -655358, 2, 0, 786434, 2, 0, -720893, 2, 0, -655357, 2, 0, -720892, 2, 0, -655356, 2, 0, -589820, 2, 0, 720900, 2, 0, 786436, 2, 0, -720891, 2, 0, -655355, 2, 0, -589819, 2, 0, -524283, 2, 0, -458747, 2, 0, -393211, 2, 0, -327675, 2, 0, -262139, 2, 0, -196603, 2, 0, -131067, 2, 0, -65531, 2, 0, 5, 2, 0, 65541, 2, 0, 131077, 2, 0, 196613, 2, 0, 589829, 2, 0, 655365, 2, 0, 720901, 2, 0, 786437, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0)

[node name="Void" parent="TileMap" instance=ExtResource("3_gfdxi")]

[node name="Laser" parent="." instance=ExtResource("4_t28y2")]
y_sort_enabled = true
position = Vector2(-1078, 466)

[node name="Area2D" parent="Laser" index="0"]
position = Vector2(22, 14)
rotation = 1.1143

[node name="AnimatedSprite2D" parent="Laser" index="1"]
frame = 1

[node name="ColorRect" parent="Laser" index="2"]
material = SubResource("ShaderMaterial_bpbao")
offset_left = 75.0
offset_top = -102.0
offset_right = 883.0
offset_bottom = -22.0
rotation = -0.483485

[node name="Laser2" parent="." instance=ExtResource("4_t28y2")]
y_sort_enabled = true
position = Vector2(-1051, -628)

[node name="Area2D" parent="Laser2" index="0"]
position = Vector2(49, 100)
rotation = 0.515566

[node name="CollisionShape2D" parent="Laser2/Area2D" index="0"]
position = Vector2(-20.561, 26.594)
rotation = -1.61911

[node name="CollisionShape2D" parent="Laser2/Area2D/StaticBody2D" index="0"]
position = Vector2(-26.0133, 25.0861)
rotation = -1.63509

[node name="AnimatedSprite2D" parent="Laser2" index="1"]
frame = 2
flip_h = true

[node name="ColorRect" parent="Laser2" index="2"]
z_index = 1
material = SubResource("ShaderMaterial_puidh")
offset_left = 100.0
offset_top = 11.0
offset_right = 908.0
offset_bottom = 91.0
rotation = 0.473645

[node name="Laser3" parent="." instance=ExtResource("4_t28y2")]
position = Vector2(1074, 466)

[node name="Area2D" parent="Laser3" index="0"]
position = Vector2(10, 37)
rotation = 2.10447

[node name="AnimatedSprite2D" parent="Laser3" index="1"]
z_index = 1
frame = 1
flip_h = true

[node name="ColorRect" parent="Laser3" index="2"]
material = SubResource("ShaderMaterial_cojwc")
offset_left = -780.0
offset_top = -470.0
offset_right = 27.9999
offset_bottom = -390.0
rotation = 0.466055

[node name="Laser4" parent="." instance=ExtResource("4_t28y2")]
position = Vector2(1059, -622)

[node name="AnimatedSprite2D" parent="Laser4" index="1"]
frame = 2

[node name="ColorRect" parent="Laser4" index="2"]
z_index = 1
material = SubResource("ShaderMaterial_iu7sj")
offset_left = -823.0
offset_top = 372.0
offset_right = -15.0
offset_bottom = 452.0
rotation = -0.4659

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.7, 0.7)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xx6d3")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_glsn0")
bus = &"SFX"

[editable path="TileMap/Void"]
[editable path="Laser"]
[editable path="Laser2"]
[editable path="Laser3"]
[editable path="Laser4"]
